--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ASCO CacaoTrack - Collecte Données Terrain</title>
-    <meta name="description" content="Application de collecte de données agricoles pour producteurs de cacao en Côte d'Ivoire" />
-    <meta name="author" content="ASCO" />
 
-    <meta property="og:title" content="ASCO CacaoTrack - Collecte Données Terrain" />
-    <meta property="og:description" content="Application de collecte de données agricoles pour producteurs de cacao" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ASCO Track - Collecte Données Terrain</title>
+  <meta name="description"
+    content="Application de collecte de données agricoles pour producteurs de cacao en Côte d'Ivoire" />
+  <meta name="author" content="ASCO" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="ASCO Track - Collecte Données Terrain" />
+  <meta property="og:description" content="Application de collecte de données agricoles pour producteurs de cacao" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/og-image.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
